Fixed video sizes and info page load into wrong colour

--- a/src/App.css
+++ b/src/App.css
@@ -74,6 +74,10 @@
   max-width: 100%;
   margin-bottom: 1em;
   border: 3px solid red;
+  top: 0;
+  bottom: 0;
+  width: 100%;
+  height: 100%;
 }
 
 /* Testing item, remove before production */
